@@ -61,7 +61,8 @@ remove = Alien::Install::Role::FooRole1
 remove = Alien::Install::Role::FooRole2
 
 [Prereqs]
-Role::Tiny = 1.003001
+Role::Tiny               = 1.003001
+Class::Method::Modifiers = 0
 
 [Author::Plicease::Upload]
 cpan = 1
