@@ -75,6 +75,7 @@ with qw(
   Alien::Install::Role::Autoconf
   Alien::Install::Role::TestCompileRun
   Alien::Install::Role::TestFFI
+  Alien::Install::Role::VersionSortSimple
 );
 
 register_hook
