@@ -1,6 +1,6 @@
 use strict;
 use warnings;
-use Test::More tests => 10;
+use Test::More tests => 12;
 
 use_ok 'Alien::Install';
 use_ok 'Alien::Install::Util';
@@ -12,3 +12,5 @@ use_ok 'Alien::Install::Role::FTP';
 use_ok 'Alien::Install::Role::Autoconf';
 use_ok 'Alien::Install::Role::TestCompileRun';
 use_ok 'Alien::Install::Role::TestFFI';
+use_ok 'Alien::Install::Role::VersionSortSimple';
+use_ok 'Alien::Install::Role::VersionSortMultiple';
